force-app/main/default/objects/Card__c/fields/LeadId__c.field-meta.xml
<CustomField>
    <fullName>LeadId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Name</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Cards</relationshipLabel>
    <relationshipName>Cards</relationshipName>
    <type>Lookup</type>
</CustomField>