force-app/main/default/objects/Card__c/fields/TypeId__c.field-meta.xml
<CustomField>
    <fullName>TypeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Type of card</description>
    <label>Type Name</label>
    <referenceTo>Type__c</referenceTo>
    <relationshipLabel>Cards</relationshipLabel>
    <relationshipName>Cards</relationshipName>
    <type>Lookup</type>
</CustomField>